# hsd-presentie

./: .gitignore  .gitmodules  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  graphics.cpp  main.c  main.cpp  mqtt.cpp
main/include/: graphics.hpp  main.h  mqtt.hpp
